grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grafana
    component: core
  name: grafana
  namespace: monitoring
spec:
  host: grafana.vagrant.f8
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2019-05-23T15:51:38Z'
          status: 'True'
          type: Admitted
      host: grafana.vagrant.f8
      routerName: router
      wildcardPolicy: None
