kubeless-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    controller: ui
  name: kubeless-ui
  namespace: kubeless
spec:
  host: kubeless-ui.vagrant.f8
  port:
    targetPort: ui-port
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: ui
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2019-05-23T14:58:59Z'
          status: 'True'
          type: Admitted
      host: kubeless-ui.vagrant.f8
      routerName: router
      wildcardPolicy: None
