prometheus-route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
  namespace: monitoring
spec:
  host: prometheus.vagrant.f8
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2019-05-23T15:48:02Z'
          status: 'True'
          type: Admitted
      host: prometheus.vagrant.f8
      routerName: router
      wildcardPolicy: None
